2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-wait-for-response): Message less (bug#9540).
	(nnimap-insert-partial-structure): The charset parameter isn't
	case-sensitive.

	* nnheader.el (nnheader-message-maybe): New function.

	* shr.el (shr-tag-table): Render totally broken tables better.

	* mml.el (mml-generate-mime-1): Don't alter the contents if we're
	computing the boundary.

2011-09-26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* pop3.el (pop3-number-of-responses): Removed.
	(pop3-wait-for-messages): Rewrite to take linear time instead of
	exponential time.

2011-09-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-show-article): Bind `shr-ignore-cache' to
	re-fetch images.

	* shr.el (shr-tag-img): Support a new variable `shr-ignore-cache' to
	re-fetch images when hitting `g' in Gnus.

2011-09-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml.el (mml-inhibit-compute-boundary): New internal variable.
	(mml-compute-boundary): Don't check collision if it is non-nil.
	(mml-compute-boundary-1): Use mml-generate-mime-1 to encode part
	before checking collision.

2011-09-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-indent-citation): Really make sure there's a
	newline at the end.

	* nnimap.el (nnimap-parse-flags): Make regexp less prone to overflows.
	Fix suggested by John Wiegley.

	* pop3.el (pop3-open-server): Fix +OK end-of-command regexp.

	* gnus-art.el (gnus-treat-hide-citation): Add doc.

	* message.el (message-default-send-rename-function): Break out into its
	own function.

	* ecomplete.el (ecomplete-display-matches): Revert patch since it
	doesn't work under XEmacs.

	* nnimap.el (nnimap-map-port): New function to connect to 993 instead
	of "imaps" to word around Windows problems.
	(nnimap-open-connection-1): Use it.

	* message.el (message-indent-citation): Revert last change which made
	`F' not work.

2011-09-13  Kan-Ru Chen  <kanru@kanru.info>
